--- a/requirements.txt
+++ b/requirements.txt
@@ -57,8 +57,8 @@ terminaltables==3.1.10
 thop==0.1.1.post2209072238
 threadpoolctl==3.1.0
 timm==0.3.2
-torch @ file:///home/niexing/projects/package/torch-1.10.0%2Bcu111-cp38-cp38-linux_x86_64.whl
-torchvision @ file:///home/niexing/projects/package/torchvision-0.11.0%2Bcu111-cp38-cp38-linux_x86_64.whl
+torch==1.10.0
+torchvision==0.11.0
 tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.26.13
